# HA-GreeClimatev2

./: .gitignore  DESIGN.md  commit_msg.txt  hacs.json  prerelease.sh  pyproject.toml  pytest.ini  release.sh  requirements_test.txt
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
custom_components/: __init__.py
custom_components/gree/: climate.py  device_api.py
custom_components/greev2/: __init__.py  climate.py  climate_helpers.py  config_flow.py  const.py  device_api.py  manifest.json
custom_components/greev2/translations/: en.json
logs/: .8765e3da06565bd228901c363a6332a1534b8949-audit.json
memory-bank/: activeContext.md  config_flow_plan_incremental.md  decisionLog.md  options_flow_plan.md  productContext.md  progress.md  refactor_plan_incremental.md  systemPatterns.md  test_improvement_plan.md
tests/: TEST_AND_RELEASE_GUIDE.md  conftest.py  test_climate_helpers.py  test_command.py  test_config_flow.py  test_init.py  test_properties.py  test_update.py
tests/commands/: test_commands.py
tests/device_api/: test_bind.py  test_get_status.py  test_init.py  test_send_command.py
